# curves

./: .travis.yml  CMakeLists.txt  ControlPoint.qml  README.md  chaikins.cpp  chaikins.h  line.cpp  line.h  main.cpp  main.qml  qml.qrc
include/: chaikins.h  line.h
src/: chaikins.cpp  chaikins_model.cpp  line.cpp  main.cpp
test/: CMakeLists.txt  main.cpp  tst_chaikins_model.h  tst_chaikinscurve.cpp  tst_chaikinsmodel.cpp  tst_line.cpp
